<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/side1"/>

            <EditText
                android:id="@+id/side1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAutofill="no"
                android:layout_marginStart="20sp"
                android:maxLength="8"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/side2"/>

            <EditText
                android:id="@+id/side2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAutofill="no"
                android:layout_marginStart="20sp"
                android:maxLength="8"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/side3"/>

            <EditText
                android:id="@+id/side3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAutofill="no"
                android:layout_marginStart="20sp"
                android:maxLength="8"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:id="@+id/classify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/classify" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/inputs"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20sp"
        android:layout_marginHorizontal="60sp" >
    </FrameLayout>


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/actionMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        fab:menu_fab_size="normal"
        fab:menu_showShadow="true"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_colorNormal="#DA4336"
        fab:menu_colorPressed="#E75043"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_animationDelayPerItem="50"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_buttonSpacing="0dp"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_textColor="#000"
        fab:menu_labels_textSize="14sp"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_colorNormal="#66FFFFFF"
        fab:menu_labels_colorPressed="#66FFFFFF"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_position="left"
        fab:menu_openDirection="up"
        fab:menu_backgroundColor="@android:color/transparent"
        tools:ignore="MissingConstraints">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_outline_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/info" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/save_to_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_save_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/save" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/load_from_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_folder_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/load"
            fab:fab_colorDisabled="#fff"/>

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>